--- a/index.html
+++ b/index.html
@@ -5,29 +5,48 @@
 
 		<title>Collapse</title>
 
-		<script src="js/vendor/phaser.min.js"></script>
+		<script src="assets/js/phaser.min.js"></script>
 	</head>
 	<body>
 
 	<script type="text/javascript">
-		window.onload = function() {
+		var GRID_WIDTH = 15;
+		var GRID_HEIGHT = 20;
+		var BLOCK_SIZE = 32;
 
-			var game = new Phaser.Game(800, 600, Phaser.AUTO, '', { preload: preload, create: create });
+		var game = new Phaser.Game(GRID_WIDTH * BLOCK_SIZE, GRID_HEIGHT * BLOCK_SIZE, Phaser.AUTO, '', { preload: preload, create: create, update: update });
+		var rng = new Phaser.RandomDataGenerator();
 
-			function preload () {
+		var grid, blockColors;
 
-				game.load.image('logo', 'phaser.png');
+		function preload() {
+			game.load.image('blue', 'assets/img/element_blue_square.png');
+			game.load.image('red', 'assets/img/element_red_square.png');
+			game.load.image('green', 'assets/img/element_green_square.png');
+		}
 
+		function create() {
+			blockColors = ['blue', 'red', 'green'];
+
+			initGrid();
+		}
+
+		function update() {
+
+		}
+
+		function initGrid() {
+			grid = [];
+			for(var x = 0; x < GRID_WIDTH; x++) {
+				grid[x] = Array(GRID_WIDTH);
+				for(var y = 0; y < GRID_HEIGHT; y++) {
+					if (y > 10) continue;
+
+					var block = game.add.sprite(x * BLOCK_SIZE, game.height - (y * BLOCK_SIZE), rng.pick(blockColors));
+					grid[x][y] = block;
+				}
 			}
-
-			function create () {
-
-				var logo = game.add.sprite(game.world.centerX, game.world.centerY, 'logo');
-				logo.anchor.setTo(0.5, 0.5);
-
-			}
-
-		};
+		}
 	</script>
 	</body>
 </html>
