Better random, full grid

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		var BLOCK_SIZE = 32;
 
 		var game = new Phaser.Game(GRID_WIDTH * BLOCK_SIZE, GRID_HEIGHT * BLOCK_SIZE, Phaser.AUTO, '', { preload: preload, create: create, update: update });
-		var rng = new Phaser.RandomDataGenerator();
+		var rng = new Phaser.RandomDataGenerator([Date.now()]);
 
 		var grid, blockColors;
 
@@ -40,9 +40,9 @@
 			for(var x = 0; x < GRID_WIDTH; x++) {
 				grid[x] = Array(GRID_WIDTH);
 				for(var y = 0; y < GRID_HEIGHT; y++) {
-					if (y > 10) continue;
+					//if (y > 10) continue;
 
-					var block = game.add.sprite(x * BLOCK_SIZE, game.height - (y * BLOCK_SIZE), rng.pick(blockColors));
+					var block = game.add.sprite(x * BLOCK_SIZE, game.height - BLOCK_SIZE - (y * BLOCK_SIZE), rng.pick(blockColors));
 					grid[x][y] = block;
 				}
 			}
