Viewport stuff for mobile

--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!doctype html>
 <html>
 	<head>
-		<meta charset="utf-8">
-
 		<title>Collapse</title>
+
+		<meta charset="utf-8">
+		<meta name="viewport" content="initial-scale=1 maximum-scale=1 user-scalable=0 minimal-ui" />
+
+		<style>
+			body {
+				margin: 0;
+				background-color: black;
+			}
+		</style>
 
 		<script src="assets/js/phaser.min.js"></script>
 	</head>
